--- a/BuyingGuide-Info.plist
+++ b/BuyingGuide-Info.plist
@@ -23,10 +23,10 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
-	<true/>
+	<false/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
-	<key>UIPrerenderedIcon</key>
-	<false/>
+	<key>iTunesAppURL</key>
+	<string>someURL</string>
 </dict>
 </plist>
