added donation capability

--- a/BuyingGuide-FJS-Info.plist
+++ b/BuyingGuide-FJS-Info.plist
@@ -26,5 +26,9 @@
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>DonationURL</key>
+	<string>https://secure3.convio.net/hrc/site/SPageServer?pagename=main_donate_go</string>
+	<key>iTunesAppURL</key>
+	<string>someURL</string>
 </dict>
 </plist>
