--- a/BuyingGuide-FJS-Info.plist
+++ b/BuyingGuide-FJS-Info.plist
@@ -30,5 +30,9 @@
 	<string>https://secure3.convio.net/hrc/site/SPageServer?pagename=main_donate_go</string>
 	<key>iTunesAppURL</key>
 	<string>someURL</string>
+	<key>ScoreCardURLSuffix</key>
+	<string>&amp;search_id=1&amp;search_type=Quick</string>
+	<key>ScoreCardURLPrefix</key>
+	<string>http://www.hrc.org/issues/workplace/organization_profile.asp?organization_id=</string>
 </dict>
 </plist>
