--- a/JSONSync.plist
+++ b/JSONSync.plist
@@ -142,6 +142,14 @@
 			<key>kind</key>
 			<string>Integer</string>
 		</dict>
+		<dict>
+			<key>JSONKey</key>
+			<string>BrandNationalSponsorInd</string>
+			<key>CoreDataKey</key>
+			<string>partner</string>
+			<key>kind</key>
+			<string>Integer</string>
+		</dict>
 	</array>
 </dict>
 </plist>
