stubbed out deletion code, need to resolve error code 1570 on saveData

--- a/JSONSync.plist
+++ b/JSONSync.plist
@@ -158,6 +158,14 @@
 			<key>kind</key>
 			<string>Integer</string>
 		</dict>
+		<dict>
+			<key>JSONKey</key>
+			<string>IsCurrentInd</string>
+			<key>CoreDataKey</key>
+			<string></string>
+			<key>kind</key>
+			<string>Integer</string>
+		</dict>
 	</array>
 	<key>BGScorecard</key>
 	<array>
